<resources>

    <string name="app_name">NYW_App</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
  <!-- login -->
    <string name="login_hint1">用户名</string>
	<string name="login_hint2">密&#160;&#160;&#160;&#160;码</string>
	<string name="login_btn_name">登录</string>
  <!-- forget_pw -->
	<string name="forget_pw">忘记密码?</string>
	<string name="forget_pw_title">重置密码</string>
<!-- main -->
	<string name="msg_title">消息</string>
	<string name="connection_title">报表</string>
	<string name="mine_title">我</string>
</resources>